<resources>
    <string name="app_name">Parking Locator</string>

    <string name="google_maps_key">AIzaSyBxWaFOfa6V0BF6d0qav16AgLSKJNIfGqk</string>
    <string name="allow_permission">Allow Permission</string>
    <string name="location_permission_required">Location Permission Required</string>
    <string name="allow_location_access_description">Location permission is required.\n Please allow location access to continue.\n
    Also turn on GPS to High Accuracy Mode.</string>
    <string name="turn_on_gps">Turn On Gps</string>

    <string name="track_location_title">Allow "Parking Locator" to access your location while you use the app?</string>
    <string name="track_location_text">This will help in tracking your current location.</string>
    <string name="done">Done</string>
    <string name="turn_on_internet">Turn On Internet</string>
    <string name="getting_your_location">Getting your location.</string>
    <string name="please_wait">Please wait.....</string>
    <string name="my_location">My Location</string>
    <string name="save_location">Save Location</string>
    <string name="location_name">Location Title</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="error_title">Error</string>
    <string name="enable_all_options_message">Please enable all options to continue.</string>
    <string name="no_data_available">No Data Available</string>
    <string name="saved_locations">Saved Locations</string>
    <string name="navigate">Navigate</string>
    <string name="share">Share</string>
    <string name="share_using">Share Using</string>
    <string name="share_prefix_message">Hi. have a look at my location</string>
    <string name="exit">Exit</string>
    <string name="settings">Settings</string>
    <string name="allow_app_notifications">Allow App Notifications</string>
    <string name="delete">Delete</string>
    <string name="admob_id">YOUR_ADMOB_APP_ID</string>
    <string name="about_us">About Us</string>
    <string name="email_us">Email Us:</string>
    <string name="whatsapp">WhatsApp:</string>
    <string name="skype">Skype:</string>
    <string name="something_went_wrong_message">Something went wrong. Please try again!</string>
    <string name="database_url">https://personal-app.firebaseio.com/</string>

    <!-- Shapplication app -->
    <string name="share_app_subject">Yo! Check out %s</string>
    <string name="share_app_body">Check out %1$s, this app it will help you save your parking locations %2$s</string>
    <string name="share_title">Choose Application</string>
    <string name="add_emergency_number">Add Emergency Number</string>
    <string name="add_emergency_number_message">Please add an emergency number in app settings first. Click Ok to go to settings.</string>
    <string name="ok">Ok</string>

    <string name="default_notification_channel_id">Updates</string>
</resources>
