<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:gravity="center"
    tools:context=".activities.StartActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/location_image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/location_permissions" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/location_permission_required"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp"
            android:text="@string/allow_location_access_description"
            android:textColor="@color/colorBlack"
            android:textSize="14sp" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/allow_permissions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/enabled_permission_button"
            android:ellipsize="end"
            android:lines="1"
            android:maxLines="1"
            android:text="@string/allow_permission"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/turn_on_internet_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/enabled_permission_button"
            android:ellipsize="end"
            android:lines="1"
            android:maxLines="1"
            android:text="@string/turn_on_internet"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/turn_on_gps_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/enabled_permission_button"
            android:ellipsize="end"
            android:lines="1"
            android:maxLines="1"
            android:text="@string/turn_on_gps"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/done_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/enabled_permission_button"
            android:ellipsize="end"
            android:lines="1"
            android:maxLines="1"
            android:text="@string/done"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite" />

    </LinearLayout>


</ScrollView>