<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/header_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_toolbar"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/header_icon"
                android:layout_width="@dimen/margin_35"
                android:layout_height="@dimen/margin_35"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_15"
                app:srcCompat="@drawable/ic_location_on_white_24dp" />
        </LinearLayout>

        <com.app.parkinglocator.views.TextViewBold
            android:id="@+id/text_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginRight="@dimen/margin_10"
            android:gravity="center"
            android:text="@string/save_location"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_18" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_location_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginRight="@dimen/margin_10"
            android:layout_marginBottom="@dimen/margin_5">

            <com.app.parkinglocator.views.EditTextRegular
                android:id="@+id/input_location_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/location_name" />

        </android.support.design.widget.TextInputLayout>

        <com.app.parkinglocator.views.TextViewRegular
            android:id="@+id/text_timestamp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_5"
            android:layout_marginRight="@dimen/margin_10"
            android:layout_marginBottom="@dimen/margin_5"
            android:gravity="end"
            android:text=""
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_12" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:layout_marginBottom="@dimen/margin_5"
            android:orientation="horizontal">

            <com.app.parkinglocator.views.ButtonBold
                android:id="@+id/button_cancel"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginLeft="@dimen/margin_10"
                android:layout_marginTop="@dimen/margin_15"
                android:layout_marginRight="@dimen/margin_10"
                android:layout_marginBottom="@dimen/margin_15"
                android:layout_weight="1"
                android:background="@drawable/circular_button_bg_grey"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_12" />

            <com.app.parkinglocator.views.ButtonBold
                android:id="@+id/button_save"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginLeft="@dimen/margin_10"
                android:layout_marginTop="@dimen/margin_15"
                android:layout_marginRight="@dimen/margin_10"
                android:layout_marginBottom="@dimen/margin_15"
                android:layout_weight="1"
                android:background="@drawable/circular_button_bg_primary"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_12" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>