<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".activities.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/top_options_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:gravity="center_vertical">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="15dp"
                app:backgroundTint="@color/colorWhite"
                app:fabSize="mini"
                app:srcCompat="@drawable/ic_arrow_back_black_24dp" />

            <com.app.parkinglocator.views.TextViewBold
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/fab_options"
                android:layout_toEndOf="@+id/fab_back"
                android:ellipsize="end"
                android:gravity="center"
                android:lines="1"
                android:maxLines="1"
                android:paddingStart="@dimen/margin_5"
                android:paddingEnd="@dimen/margin_5"
                android:text="@string/about_us"
                android:textSize="@dimen/text_size_18" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:visibility="invisible"
                app:backgroundTint="@color/colorWhite"
                app:fabSize="mini"
                app:srcCompat="@drawable/ic_check_black_24dp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_5"
                android:layout_marginBottom="@dimen/margin_5"
                app:cardElevation="5dp">

                <RelativeLayout
                    android:id="@+id/email_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_5"
                    android:layout_marginBottom="@dimen/margin_5">

                    <com.app.parkinglocator.views.TextViewBold
                        android:id="@+id/email_heading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:lines="1"
                        android:maxLines="1"
                        android:paddingStart="@dimen/margin_10"
                        android:paddingEnd="@dimen/margin_10"
                        android:text="@string/email_us"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_16" />

                    <com.app.parkinglocator.views.TextViewRegular
                        android:id="@+id/email_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/email_heading"
                        android:layout_marginTop="@dimen/margin_10"
                        android:gravity="center_vertical"
                        android:lines="1"
                        android:maxLines="1"
                        android:paddingStart="@dimen/margin_15"
                        android:paddingEnd="@dimen/margin_15"
                        android:text=""
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_16" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/whatsapp_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_5"
                app:cardElevation="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_5"
                    android:layout_marginBottom="@dimen/margin_5">

                    <com.app.parkinglocator.views.TextViewBold
                        android:id="@+id/whatsapp_heading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:lines="1"
                        android:maxLines="1"
                        android:paddingStart="@dimen/margin_10"
                        android:paddingEnd="@dimen/margin_10"
                        android:text="@string/whatsapp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_16" />

                    <com.app.parkinglocator.views.TextViewRegular
                        android:id="@+id/contact_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/whatsapp_heading"
                        android:layout_marginTop="@dimen/margin_10"
                        android:gravity="center_vertical"
                        android:lines="1"
                        android:maxLines="1"
                        android:paddingStart="@dimen/margin_15"
                        android:paddingEnd="@dimen/margin_15"
                        android:text=""
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_16" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/skype_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_5"
                app:cardElevation="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_5"
                    android:layout_marginBottom="@dimen/margin_5">

                    <com.app.parkinglocator.views.TextViewBold
                        android:id="@+id/skype_heading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:lines="1"
                        android:maxLines="1"
                        android:paddingStart="@dimen/margin_10"
                        android:paddingEnd="@dimen/margin_10"
                        android:text="@string/skype"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_16" />

                    <com.app.parkinglocator.views.TextViewRegular
                        android:id="@+id/skype"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/skype_heading"
                        android:layout_marginTop="@dimen/margin_10"
                        android:gravity="center_vertical"
                        android:lines="1"
                        android:maxLines="1"
                        android:paddingStart="@dimen/margin_15"
                        android:paddingEnd="@dimen/margin_15"
                        android:text=""
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_16" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:layout_marginBottom="@dimen/margin_10"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/facebook_icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="@dimen/margin_10"
                    android:layout_marginTop="@dimen/margin_5"
                    android:layout_marginEnd="@dimen/margin_10"
                    android:layout_marginBottom="@dimen/margin_5"
                    android:background="@drawable/ic_icon_facebook" />

                <ImageButton
                    android:id="@+id/instagram_icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="@dimen/margin_10"
                    android:layout_marginTop="@dimen/margin_5"
                    android:layout_marginEnd="@dimen/margin_10"
                    android:layout_marginBottom="@dimen/margin_5"
                    android:background="@drawable/ic_icon_instagram" />


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>